@@ -2,6 +2,9 @@ Thu May 31 23:34:00 EEST 2007 Pekka Riikonen <priikone@silcnet.org>
 
 	* Autodist 1.3.2.
 
+	* Added 'prereq' directive to support encforcment of Autodist
+	  version.
+
 	* Added support for providing extra parameters to autodist that
 	  are passed to the hook scripts.  User can specify whatever
 	  extra parameter they want.
